# Applied-methods-of-AI

./: .gitignore  README.md  bear.csv  bull.csv  pyproject.toml
Info/: ClearML.md  Install python.md
Test/: 1_task_with_logger.py  2_remote_task.py  3_dataset_creation.py  4_task_with_dataset.py  ClearML Tutorial.ipynb
src/cryptoforecast/: constants.py  create_task.py  creation_dataset.py  load_btc_info.py
src/cryptoforecast/data/: btc_1d_data_2018_to_2025.csv  btc_4h_data_2018_to_2025.csv
